# Trinity_py

./: .gitignore  BACKEND_IMPLEMENTATION_SUMMARY.md  COMPRESSED_STORAGE.md  EXECUTABLE_BUILD_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_COMPRESSION.md  PR13_RESOLUTION_SUMMARY.md  PYTHON_WALLET.md  README.md  SECURITY_SUMMARY.md  SOLO_MINING_INTEGRATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  WINDOWS_EXE_BUILD_README.md  pyproject.toml  trinity-qt.pro
.github/workflows/: build-and-commit-exe.yml  build-wallet.yml  build-windows-msys2.yml  c-cpp.yml  close-duplicate-prs.yml  python-package.yml  python.yml
Files/: BUILD_INFO.txt  INSTALL.md  README.txt  TrinityWallet.exe.INFO  WINDOWS_BUILD_GUIDE.md
doc/: README.md  mining.md
src/: compressedstorage.cpp  compressedstorage.h  init.cpp  main.cpp  makefile.unix
src/test/: compressedstorage_tests.cpp
trinity_wallet_py/: BUILD.md  BUILD_WINDOWS_EXE.bat  MINING.md  README.md  TrinityWallet.spec  __init__.py  build_linux.sh  build_windows.bat  build_windows_fast.py  launch_wallet.bat  launch_wallet.sh  requirements.txt  test_backend.py  test_miner.py  test_wallet.py  wallet.py
trinity_wallet_py/backend/: QUICKSTART.md  README.md  __init__.py  cli.py  examples.py  server.py
trinity_wallet_py/backend/api/: __init__.py  base_api.py  block_explorer_api.py  mining_pool_api.py
trinity_wallet_py/core/: __init__.py  key.py  miner.py  rpc_client.py  wallet.py
trinity_wallet_py/gui/: __init__.py  main_window.py
trinity_wallet_py/releases/: README.md
trinity_wallet_py/utils/: base58.py
(+5 files in other folders)
